@@ -13,12 +13,10 @@ sidebar_label: Development
 ### Backend start
 
 1. Requires `maven3+`, `java17` and `lombok` environments
-
 2. (Optional) Modify the configuration file: `manager/src/main/resources/application.yml`
-
 3. Execute under the project root directory: `mvn clean install -DskipTests`
-
-4. Start `springboot manager` service: `manager/src/main/java/org/apache/hertzbeat/hertzbeat-manager/Manager.java`
+4. Add VM Options: `--add-opens=java.base/java.nio=org.apache.arrow.memory.core,ALL-UNNAMED`
+5. Start `springboot manager` service: `manager/src/main/java/org/apache/hertzbeat/hertzbeat-manager/Manager.java`
 
 ### Frontend start
 
